# oca-delivery-carrier

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
base_delivery_carrier_label/i18n/: it.po
delivery_auto_refresh/: README.rst  __manifest__.py
delivery_auto_refresh/models/: sale_order.py
delivery_carrier_account/: README.rst  __manifest__.py
delivery_carrier_account/i18n/: delivery_carrier_account.pot
delivery_carrier_account/readme/: CONTRIBUTORS.md
delivery_carrier_account/tests/: test_carrier_account.py
delivery_carrier_account/views/: carrier_account.xml  delivery_carrier.xml
delivery_carrier_customer_info/: README.rst
delivery_carrier_info/: README.rst  __manifest__.py
delivery_carrier_info/i18n/: delivery_carrier_info.pot
delivery_carrier_manual_price/: README.rst  __manifest__.py
delivery_carrier_manual_weight/: README.rst  __manifest__.py
delivery_carrier_pricelist/: README.rst  __manifest__.py
delivery_carrier_shipping_label/: README.rst  __manifest__.py
delivery_carrier_warehouse/: README.rst  __manifest__.py
delivery_cttexpress/: README.rst  __manifest__.py
delivery_free_fee_removal/: README.rst  __manifest__.py
delivery_package_fee/: README.rst  __manifest__.py
delivery_package_number/: README.rst  __manifest__.py
delivery_postlogistics/: README.rst  __manifest__.py
delivery_price_method/: README.rst  __manifest__.py
delivery_schenker/i18n/: it.po
delivery_state_manual/: README.rst  __manifest__.py
partner_delivery_info/: README.rst
partner_delivery_schedule/: README.rst  __manifest__.py
partner_delivery_zone/: README.rst  __manifest__.py
server_environment_delivery/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
stock_picking_carrier_from_rule/: README.rst  __manifest__.py
stock_picking_delivery_package_type_domain/: README.rst  __manifest__.py
(+177 files in other folders)
