[project]
name = "odoo-addons-oca-delivery-carrier"
version = "18.0.20241220.0"
dependencies = [
    "odoo-addon-delivery_carrier_partner==18.0.*",
    "odoo-addon-delivery_free_fee_removal==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
