[project]
name = "odoo-addons-oca-delivery-carrier"
version = "18.0.20250213.0"
dependencies = [
    "odoo-addon-delivery_carrier_account==18.0.*",
    "odoo-addon-delivery_carrier_info==18.0.*",
    "odoo-addon-delivery_carrier_partner==18.0.*",
    "odoo-addon-delivery_carrier_pricelist==18.0.*",
    "odoo-addon-delivery_carrier_shipping_label==18.0.*",
    "odoo-addon-delivery_carrier_warehouse==18.0.*",
    "odoo-addon-delivery_free_fee_removal==18.0.*",
    "odoo-addon-delivery_package_fee==18.0.*",
    "odoo-addon-partner_delivery_schedule==18.0.*",
    "odoo-addon-server_environment_delivery==18.0.*",
    "odoo-addon-stock_picking_carrier_from_rule==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
